--- a/todo-app/todo-frontend/package.json
+++ b/todo-app/todo-frontend/package.json
@@ -2,11 +2,15 @@
   "name": "todo-react-frontend",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "npm": "8.5.1"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
+    "npm": "^8.19.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
