test: created prod build docker file, built frontend is served by its own nginx server, not sure if it's the most sensible solution

--- a/todo-app/todo-frontend/Dockerfile
+++ b/todo-app/todo-frontend/Dockerfile
@@ -5,7 +5,7 @@ WORKDIR /usr/src/app
 
 COPY . .
 
-# ENV REACT_APP_BACKEND_URL=http://localhost:3000
+ENV REACT_APP_BACKEND_URL=http://localhost:8080/api
 
 # had to do ugly normal install because I have too old version of npm on my computer, and can't
 # easily change it
