--- a/part12_21-22/frontend/package.json
+++ b/part12_21-22/frontend/package.json
@@ -36,13 +36,13 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:3003",
+  "proxy": "http://blogs-backend:3003",
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
     "cypress": "^11.0.1",
-    "eslint-plugin-jest": "^27.1.4",
+    "eslint-plugin-jest": "^27.2.1",
     "jest-watch-typeahead": "^0.6.5"
   }
 }
