--- a/part12_21-22/frontend/package.json
+++ b/part12_21-22/frontend/package.json
@@ -12,6 +12,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "start-prod": "node serve_static/app.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -36,7 +37,7 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://blogs-backend:3003",
+  "proxy": "http://blogs-backend:3001",
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
